fix: Adjust CSS for correct alignment of checkbox and label

--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,28 @@ h1 {
 .input-group, .result-group {
     margin: 10px 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.input-group label, .input-group input, .input-group button, .input-group input[type=checkbox] {
+.input-group label, .input-group input, .input-group button {
     display: block;
     width: 100%;
     margin: 5px 0;
     padding: 10px;
     box-sizing: border-box;
+}
+
+.input-group input[type=checkbox] {
+    width: auto;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.label-checkbox {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
 }
 
 button {
@@ -66,7 +80,11 @@ button {
     .container {
         padding: 20px;
     }
-    .input-group label, .input-group input, .input-group button, .input-group input[type=checkbox] {
+    .input-group label, .input-group input, .input-group button {
         padding: 8px;
+    }
+    .label-checkbox {
+        flex-direction: row;
+        justify-content: flex-start;
     }
 }
